--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,6 +1,3 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: Go
 
 on:
@@ -10,7 +7,6 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   test:
     runs-on: ubuntu-latest
     steps:
@@ -20,7 +16,10 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
-    
+
+    - name: Create Docker Volume
+      run: docker volume create postgres-data
+
     - name: Build-DB
       run: docker compose build
 
