--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,6 +26,14 @@ jobs:
     - name: Create-DB
       run: docker compose up -d
 
+    - name: Wait for PostgreSQL
+      run: |
+        for i in {1..10}; do
+          docker exec $(docker ps -qf "name=postgres") pg_isready -U root -h localhost -p 5432 && break
+          echo "Waiting for PostgreSQL to be ready..."
+          sleep 5
+        done
+
     - name: Test
       run: go test -v main_test.go
 
